fix element align issue

--- a/src/chips.less
+++ b/src/chips.less
@@ -44,12 +44,13 @@
 // Small chips
 .chip-sm {
   display: inline-flex;
+  align-items: center;
+  vertical-align: middle;
   max-width: 100%;
   height: 2.4rem;
   padding: .3rem .6rem;
   border-radius: .3rem;
   font-size: 1.2rem;
-  align-items: center;
   background-color: @core-border-color;
   text-decoration: none;
 
